Brochure site text changes

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 					<div class="iphone"><img src="img/iphoneImg.png" alt="Iphone" /></div>
 					<div class="iphoneLeft"><img src="img/iphoneImg1.png" alt="Iphone" /></div>
 					<div class="contentText">
-						<h2>Help to Prevent DVT <br />with this simple App from<br /> Oxford University Health</h2>
-						<p>This app explains how the risk of developing a Deep Vein Thrombosis (DVT) and Pulmonary Embolism (PE) <strong>can be reduced.</strong> It does not replace explanation and information given to you by our staff but we hope you will find it a helpful guide to use before, during and after your stay in hospital.</p>
-						<h2 class="get">Get this App!</h2>
+						<h2>Help reduce your risk of DVT and PE in hospital with this simple app</h2>
+						<p>This app explains how the risk of developing a Deep Vein Thrombosis (DVT) or Pulmonary Embolism (PE) in hospital <strong>can be reduced.</strong> It is not intended to replace explanation and information given to you by our staff but we hope you will find it a helpful guide to use before, during and after your stay in hospital.</p>
+						<h2 class="get">Get the App!</h2>
 						<a href="#" class="appStore">appStore</a>
 						<a href="#" class="googlePLay">googlePLay</a>
 					</div>
@@ -51,7 +51,7 @@
 		<!-- /wrapper -->
 		<div id="footer">
 			<div class="footerContent">
-				<p>Oxford University Health &copy; 2012</p>
+				<p>Oxford University Hospitals Thrombosis Team &copy; 2012</p>
 			</div>
 		</div>
 	</body>
