Add link to itunes app

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<h2>Help reduce your risk of DVT and PE in hospital with this simple app</h2>
 						<p>This app explains how the risk of developing a Deep Vein Thrombosis (DVT) or Pulmonary Embolism (PE) in hospital <strong>can be reduced.</strong> It is not intended to replace explanation and information given to you by our staff but we hope you will find it a helpful guide to use before, during and after your stay in hospital.</p>
 						<h2 class="get">Get the App!</h2>
-						<a href="#" class="appStore">appStore</a>
+						<a href="https://itunes.apple.com/us/app/preventing-vte/id567759012" class="appStore">appStore</a>
 						<a href="https://play.google.com/store/apps/details?id=com.incuna.preventingvte" class="googlePLay">googlePLay</a>
 					</div>
 				</div>
