Updated footer copy

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<!-- /wrapper -->
 		<div id="footer">
 			<div class="footerContent">
-				<p>Oxford University Hospitals Thrombosis Team &copy; 2012</p>
+				<p>&copy; Oxford University Hospitals NHS Foundation Trust Thrombosis Team</p>
 			</div>
 		</div>
 	</body>
